pp18/iptables
# Generated by iptables-save v1.3.6 on Fri May 22 22:45:30 2009
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [259:25005]
:OUTPUT ACCEPT [57:7124]
## WTF er dette?
-A FORWARD -d 91.90.68.255 -j ACCEPT 
-A FORWARD -s 91.90.68.255 -j ACCEPT
-A FORWARD -s 91.90.68.254 -j ACCEPT
-A FORWARD -s 91.90.68.10 -j ACCEPT
-A FORWARD -d 91.90.68.10 -j ACCEPT
-A FORWARD -d 91.90.68.8 -j ACCEPT
-A FORWARD -s 91.90.68.8 -j ACCEPT
-A FORWARD -d 91.90.68.254 -j ACCEPT
-A FORWARD -d 91.90.68.5 -p tcp --dport 22 -j ACCEPT
-A FORWARD -s 91.90.68.5 -j ACCEPT
-A FORWARD -p tcp --dport 50 -j DROP
-A FORWARD -p tcp --dport 30869 -j DROP
-A FORWARD -p tcp --dport 1207 -j DROP
-A FORWARD -p tcp --dport 24613 -j DROP
-A FORWARD -p tcp --dport 57139 -j DROP
-A FORWARD -p tcp --dport 445 -j DROP
-A FORWARD -p tcp --dport 6881:6889 -j DROP
-A FORWARD -d vip.tracker.thepiratebay.org -j DROP
-A FORWARD -d tpb.tracker.thepiratebay.org -j DROP
-A FORWARD -d freetorrent.ru -j DROP
-A FORWARD -d tracker.openbittorrent.com -j DROP
-A FORWARD -d 11.rarbg.com -j DROP
-A FORWARD -d tracker.torrentparty.com -j DROP
-A FORWARD -d h33t.com -j DROP
-A FORWARD -d tracker1.torrentum.pl -j DROP
-A FORWARD -d photodiode.mine.nu -j DROP
-A FORWARD -d tracker.publicbt.com -j DROP
-A FORWARD -d t.dattebayo.com -j DROP
-A FORWARD -d tracker.ilibr.org -j DROP
-A FORWARD -d tracker.norbits.net -j DROP
-A FORWARD -d Betty.Nordic-T.org -j DROP
-A FORWARD -d tracker.scenetorrents.org -j DROP
-A FORWARD -d www.music-vid.com -j DROP
-A FORWARD -d www.filmbits.net -j DROP
-A FORWARD -d mybadbits.org -j DROP
-A FORWARD -d www.torrentbytes.net -j DROP
-A FORWARD -d what.cd -j DROP
-A FORWARD -d tracker.what.cd -j DROP
-A FORWARD -d bitme.org -j DROP
-A FORWARD -d tracker.bitme.org -j DROP
# -A FORWARD -d 80.239.0.0/16 -j DROP # Dreper WOW
-A INPUT -s 91.214.72.26 -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A FORWARD -s 91.214.72.26 -j DROP
#-A FORWARD -o eth0 -m state --state NEW -j ACCEPT
-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -p tcp -o eth0 --dport 25 -d utmail.no -j ACCEPT
-A FORWARD -p tcp -o eth0 --dport 25 -j DROP
-A FORWARD -o eth0 -p udp -m multiport --dports 135:140 -j DROP
-A FORWARD -o eth0 -p tcp -m multiport --dports 135:140 -j DROP
-A FORWARD -i eth0 -o eth1 -j DROP
-A FORWARD -i eth1 -o eth2 -j DROP
COMMIT
# Completed on Fri May 22 22:45:30 2009
# Generated by iptables-save v1.3.6 on Fri May 22 22:45:30 2009
*nat
:PREROUTING ACCEPT [210:22521]
:POSTROUTING ACCEPT [7:2296]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -o eth0 -p tcp --dport 25 -d utmail.no -j MASQUERADE
-A POSTROUTING -o eth3 -s 91.90.68.0/22 -j NETMAP --to 195.1.92.0/22
COMMIT
# Completed on Fri May 22 22:45:30 2009
# Generated by iptables-save v1.3.6 on Fri May 22 22:45:30 2009
*mangle
:PREROUTING ACCEPT [2061:880387]
:INPUT ACCEPT [102:8158]
:FORWARD ACCEPT [1959:872229]
:OUTPUT ACCEPT [57:7124]
:POSTROUTING ACCEPT [2016:879353]
-A PREROUTING -p tcp -m multiport -s 91.90.68.0/22 -i eth1 --dport 6666:6669,7000 -j MARK --set-mark 0x50
-A PREROUTING -p tcp -m multiport -d 195.159.66.52 -i eth1 --dport 22,80 -j MARK --set-mark 0x50
-A PREROUTING -d thias.no -j MARK --set-mark 0x50
COMMIT
# Completed on Fri May 22 22:45:30 2009
